@@ -37,6 +37,9 @@ THE SOFTWARE.
 namespace flusspferd {
 
 struct call_context;
+#ifndef IN_DOXYGEN
+class tracer;
+#endif
 
 /**
  * Native function base.
@@ -51,6 +54,15 @@ public:
 
   static native_function_base *get_native(object const &o);
 
+  /**
+   * Virtual method invoked whenever the object has to be traced.
+   *
+   * Default implementation: stub.
+   *
+   * @see native_object_base::trace
+   * @see @ref gc
+   */
+  virtual void trace(tracer &trc);
 protected:
   virtual void call(call_context &) = 0;
 
